[package]
name = "markdown-composer"
description = "A library for composing markdown documents."
version = "0.1.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SirWindfield/markdown-composer"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["github"]
github = []

[dependencies]
dyn-clonable = "0.9.0"
once_cell = "1.4.0"
serde = { version = "1.0.114", features = ["derive"], optional = true }
tousize = "1.0.0"
